--- a/app/Resources/views/crud/form.html.twig
+++ b/app/Resources/views/crud/form.html.twig
@@ -1,7 +1,23 @@
 <div class="container">
-    <div class="row">
-        <div>
-            Form
+    <form{# method="POST" action="/api/grid/create"#}>
+        <div class="row">
+            <div class="col-6">
+                <div class="form-group">
+                    <input class="form-control" type="text" placeholder="Name" name="name">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="text" placeholder="Phone" name="phone">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="email" placeholder="Email" name="email">
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="form-group">
+                    <textarea class="form-control" rows="3" placeholder="Texts" name="text"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary submit-form">Save</button>
+            </div>
         </div>
-    </div>
+    </form>
 </div>
