--- a/app/Resources/views/crud/pagination.html.twig
+++ b/app/Resources/views/crud/pagination.html.twig
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <nav aria-label="Page navigation example">
+        <nav>
             <ul class="pagination">
 {#
                 <li class="page-item"><a class="page-link" href="#">1</a></li>
