--- a/app/Resources/views/crud/base.html.twig
+++ b/app/Resources/views/crud/base.html.twig
@@ -17,6 +17,9 @@
 </head>
 
 <body>
+    <div id="preloader">
+        <div id="status">&nbsp;</div>
+    </div>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="#">CRUD TEST WORK</a>
