--- a/app/Resources/views/crud/grid.html.twig
+++ b/app/Resources/views/crud/grid.html.twig
@@ -1,23 +1,28 @@
 <div class="container">
 
-    <div class="grid-data"></div>
-
 {#
-    {% for message in messages %}
-        <div class="row">
-            <div class="col-sm-4">
-                {{ message.name }}
+    <div>
+        <div class='row'>
+            <div class="col-4">
+                <div class="col-12">
+                    Eleazar Kihn
+                </div>
+                <div class="col-12">
+                    0689114444
+                </div>
+                <div class="col-12">
+                    corkery.verdie@gutkowski.com
+                </div>
             </div>
-            <div class="col-sm-4">
-                {{ message.phone }}
-            </div>
-            <div class="col-sm-4">
-                {{ message.email }}
-            </div>
-            <div class="col-sm-12">
-                {{ message.text }}
+            <div class="col-8">
+                <div class="col-12">
+                    Quam possimus et rerum voluptas molestiae ipsa in. Ut aut qui nihil fugiat. Aspernatur alias voluptatum ipsum numquam similique non.
+                </div>
             </div>
         </div>
-    {% endfor %}
+    </div>
 #}
+    <div class="grid-data"></div>
+
+
 </div>
