--- a/app/Resources/views/crud/base.html.twig
+++ b/app/Resources/views/crud/base.html.twig
@@ -14,6 +14,7 @@
 
     <!-- Custom styles for this template -->
     <link href="{{ asset('css/styles.css') }}" rel="stylesheet">
+    <link href="{{ asset('css/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet">
 </head>
 
 <body>
@@ -23,18 +24,25 @@
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="#">CRUD TEST WORK</a>
+        <button type="button" class="btn btn-info btn-lg pull-right" data-toggle="modal" data-target="#myModal">Form</button>
     </nav>
 
+{#
     {% include ':crud:form.html.twig' %}
+#}
+    {% include ':crud:pagination.html.twig' %}
 
     {% include ':crud:grid.html.twig' %}
 
     {% include ':crud:pagination.html.twig' %}
 
+    {% include 'crud/modal.html.twig' %}
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script src="{{ asset('js/jquery.mask.min.js') }}"></script>
     <script src="{{ asset('js/script.js') }}"></script>
 
 </body>
