--- a/app/Resources/views/crud/base.html.twig
+++ b/app/Resources/views/crud/base.html.twig
@@ -24,7 +24,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="#">CRUD TEST WORK</a>
-        <button type="button" class="btn btn-info btn-lg pull-right" data-toggle="modal" data-target="#myModal">Form</button>
+        <button type="button" class="btn btn-info btn-lg pull-right button-open-modal" data-toggle="modal" data-target="#myModal">Form</button>
     </nav>
 
 {#
