--- a/app/Resources/views/crud/modal.html.twig
+++ b/app/Resources/views/crud/modal.html.twig
@@ -6,6 +6,7 @@
 
                 <form>
                     <input type="hidden" name="app_bundle_message_type[_token]" value="{{ csrf_token('app_bundle_message_type') }}">
+                    <input type="hidden" name="app_bundle_message_type[id]" value="">
 
                     <div class="form-group name">
                         <input class="form-control" type="text" placeholder="Name" name="app_bundle_message_type[name]">
