--- a/app/Resources/views/crud/base.html.twig
+++ b/app/Resources/views/crud/base.html.twig
@@ -24,7 +24,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="#">CRUD TEST WORK</a>
-        <button type="button" class="btn btn-info btn-lg pull-right button-open-modal" data-toggle="modal" data-target="#myModal">Form</button>
+        <button type="button" class="btn btn-info btn-lg pull-right button-open-modal" data-toggle="modal" data-target="#formModal">New Message</button>
     </nav>
 
 {#
@@ -36,7 +36,8 @@
 
     {% include ':crud:pagination.html.twig' %}
 
-    {% include 'crud/modal.html.twig' %}
+    {% include 'crud/formModal.html.twig' %}
+    {% include 'crud/removeConfirmModal.html.twig' %}
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
