--- a/app/Resources/views/crud/formModal.html.twig
+++ b/app/Resources/views/crud/formModal.html.twig
@@ -1,4 +1,4 @@
-<div id="myModal" class="modal fade" role="dialog">
+<div id="formModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
 
         <div class="modal-content">
