impruve form sending

--- a/app/Resources/views/crud/base.html.twig
+++ b/app/Resources/views/crud/base.html.twig
@@ -22,14 +22,11 @@
         <div id="status">&nbsp;</div>
     </div>
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">CRUD TEST WORK</a>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top navbar-right">
+        <a class="navbar-brand" href="/">CRUD TEST WORK</a>
         <button type="button" class="btn btn-info btn-lg pull-right button-open-modal" data-toggle="modal" data-target="#formModal">New Message</button>
     </nav>
 
-{#
-    {% include ':crud:form.html.twig' %}
-#}
     {% include ':crud:pagination.html.twig' %}
 
     {% include ':crud:grid.html.twig' %}
